[gd_scene load_steps=13 format=2]

[ext_resource path="res://grapfhics/Menu napisy.png" type="Texture" id=1]
[ext_resource path="res://grapfhics/buttons/Start1.png" type="Texture" id=2]
[ext_resource path="res://grapfhics/buttons/Start2.png" type="Texture" id=3]
[ext_resource path="res://grapfhics/buttons/Credits2.png" type="Texture" id=4]
[ext_resource path="res://grapfhics/buttons/Credits1.png" type="Texture" id=5]
[ext_resource path="res://grapfhics/buttons/HtP1.png" type="Texture" id=6]
[ext_resource path="res://grapfhics/buttons/HtP2.png" type="Texture" id=7]
[ext_resource path="res://scenes/Menu.gd" type="Script" id=8]
[ext_resource path="res://grapfhics/instrukcja.png" type="Texture" id=9]
[ext_resource path="res://grapfhics/credits.png" type="Texture" id=10]
[ext_resource path="res://music/sounds/Button.wav" type="AudioStream" id=11]
[ext_resource path="res://fonts/patric3.tres" type="DynamicFont" id=12]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="TextureButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -274.0
margin_top = -232.48
margin_right = 274.0
margin_bottom = -45.4802
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton2" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -274.038
margin_top = 5.0
margin_right = 275.962
margin_bottom = 190.0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton3" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -276.941
margin_top = 229.979
margin_right = 274.059
margin_bottom = 415.979
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton4" type="TextureButton" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 9 )

[node name="TextureButton5" type="TextureButton" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 10 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -6.058

[node name="Label" type="Label" parent="."]
margin_left = 47.622
margin_top = 42.8598
margin_right = 218.622
margin_bottom = 100.86
custom_fonts/font = ExtResource( 12 )
text = "ESC to exit"
align = 1
valign = 1
[connection signal="mouse_entered" from="TextureButton" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="mouse_entered" from="TextureButton2" to="." method="_on_TextureButton2_mouse_entered"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="mouse_entered" from="TextureButton3" to="." method="_on_TextureButton3_mouse_entered"]
[connection signal="pressed" from="TextureButton3" to="." method="_on_TextureButton3_pressed"]
[connection signal="pressed" from="TextureButton4" to="." method="_on_TextureButton4_pressed"]
[connection signal="pressed" from="TextureButton5" to="." method="_on_TextureButton5_pressed"]
